compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__consts__pub_const_equal_to_record_with_nested_private_function_field.snap
---
source: compiler-core/src/fsharp/tests/consts.rs
assertion_line: 100
expression: "\n          fn identity(a) {\n            a\n          }\n\n          pub type Mapper(b) {\n            Mapper(fn(b) -> b)\n          }\n\n          pub type Funcs(b) {\n            Funcs(mapper: Mapper(b))\n          }\n\n          pub const id_mapper = Funcs(Mapper(identity))\n        "
---
module rec my.``mod``
type Mapper<'t8> =
| Mapper of ('t8 -> 't8)
type Funcs<'t9> =
| Funcs of mapper: Mapper<'t9>
let private identity (a: 'u10): 'u10 = begin
    a
end
let id_mapper = Funcs(Mapper(identity))
